header, home and movie carrusel

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -7,7 +7,7 @@
   </div>
   <div class="text-white flex items-center gap-4">
     <div class="flex items-center gap-2">
-      <span>Welcome <strong>{{usernameSignal()}}</strong></span>
+      <span>Welcome <strong>{{userNameSignal()}}</strong></span>
       <img [src]="userImgSignal()" width="42" alt="user-img">
     </div>
     &nbsp; | &nbsp;
