--- a/src/app/shared/components/movie-carrusel/movie-carrusel.component.html
+++ b/src/app/shared/components/movie-carrusel/movie-carrusel.component.html
@@ -1,16 +1,16 @@
 <div class="container px-20 mt-14 mb-20">
-    <p class="font-semibold text-2xl my-3 ml-3">{{title}}</p>
+    <p class="font-semibold text-2xl my-3 ml-3">{{ titleSignal() }}</p>
     <div #swiperContainer class="swiper-container">
       <div class="swiper-wrapper">
         <ng-container *ngFor="let movie of videoContents">
           <div (mouseenter)="setHoverMovie(movie)" (mouseleave)="clearHoverMovie()" class="swiper-slide relative">
-            <img [src]="movie.poster_path | image" alt="" />
-            <div @fade *ngIf="(movie.title === this.selectedContent) || (movie.name === this.selectedContent)" class="desc p-2">
-              <span class="text-base flex flex-wrap font-bold">{{movie.original_title}}</span>
-              <p class="text-xs my-3">{{movie.overview | description:150}}</p>
+            <img [src]="movie.poster_path | image" alt="{{ movie.title || movie.name }}"/>
+            <div *ngIf="isSelectedContent(movie)" class="desc p-2">
+              <span class="text-base flex flex-wrap font-bold">{{ movie.original_title }}</span>
+              <p class="text-xs my-3">{{ movie.overview | description:150 }}</p>
               <div class="py-3 absolute w-[90%] bottom-1">
                 <p class="text-xs flex justify-between items-center">
-                  <span class="text-green-500">Vote Average : {{movie.vote_average}}</span>
+                  <span class="text-green-500">Vote Average : {{ movie.vote_average }}</span>
                   <i class="fa fa-2x fa-chevron-circle-down" aria-hidden="true"></i>
                 </p>
               </div>
@@ -19,5 +19,4 @@
         </ng-container>
       </div>
     </div>
-  
-  </div>
+</div>
