--- a/src/app/shared/components/movie-carrusel/movie-carrusel.component.scss
+++ b/src/app/shared/components/movie-carrusel/movie-carrusel.component.scss
@@ -3,63 +3,46 @@
     border-radius: 5px;
     margin: 0 10px;
     cursor: pointer;
-  }
+
+    &:hover {
+      transform: scale(1.5);
+      z-index: 1;
+      img {
+        box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.5);
+      }
+    }
   
-  .desc {
-    transition: all 300ms ease-in-out;
+    img {
+      border-radius: 5px;
+      cursor: pointer;
+      width: 300px;
+      height: 300px;
+      object-fit: cover;
+  
+      &:active {
+        cursor: grabbing;
+      }
+    }
+}
+  
+.desc {
     background-color: #181818c4;
     height: 170px;
     position: absolute;
     width: 100%;
     bottom: 0;
-  }
-  
-  .desc:hover {
     transition: all 300ms ease-in-out;
-  }
+}
   
-  .desc.tv {
-    height: 60px;
-  }
-  
-  .swiper-slide img {
-    border-radius: 5px;
-    cursor: pointer;
-    width: 300px !important;
-    height: 300px !important;
-    object-fit: cover;
-  }
-  
-  .swiper-slide img:active {
-    cursor: grabbing;
-  }
-  
-  .swiper-slide:hover {
-    transform: scale(1.5);
-    transition: all 300ms ease-in-out;
-    transition-delay: 300ms;
-    z-index: 1;
-  }
-  
-  .swiper-slide:hover img {
-    transition-delay: 300ms;
-    box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.5);
-  }
-  
-  @media screen and (max-width: 599px) {
+@media screen and (max-width: 599px) {
     .swiper-slide img {
       max-width: 14rem;
     }
+}
   
-    .swiper-button-next,
-    .swiper-button-prev {
-      display: none;
-    }
-  }
-  
-  @media screen and (max-width: 400px) {
+@media screen and (max-width: 400px) {
     .swiper-slide img {
       max-width: 10.5rem;
       border-radius: 2px;
     }
-  }
+}  
