--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="h-[68px] z-10 bg-gray-900 sticky top-0 flex items-center justify-between px-10">
   <div class="flex gap-5">
-    <img width="110" src="/assets/nflogo.png" alt="netflix-logo">
+    <img width="110" src="assets/nflogo.png" alt="netflix-logo">
     <ul class="flex items-center" *ngFor="let item of navList; trackBy: trackByNavListId">
       <li class="text-neutral-200 cursor-pointer text-sm font-extralight hover:text-gray-400 transition-[1s]">{{item}}</li>
     </ul>
