--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -11,6 +11,6 @@
       <img [src]="userImgSignal()" width="42" alt="user-img">
     </div>
     &nbsp; | &nbsp;
-    <a (click)="auth.signOut()" href="/">Signout</a>
+    <button (click)="auth.signOut()" >Signout</button>
   </div>
 </header>
